--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,29 @@
         /* from bootstrap style sheet above*/
         
       }
+      /* random chnage to test CI */
+      body{
+
+      }
+      body{
+        
+      }
+      body{
+        
+      }
+      body{
+        
+      }
+      body{
+        
+      }
+      body{
+        
+      }
+      body{
+        
+      }
+      
       /* general layout */
       
       * {
