style for note taking feature

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -638,6 +638,58 @@
       .notebook.show {
         opacity: 1;
       }
+      /* note taking style */
+      .btn-custom {
+      width: 100%;
+      background-color: transparent;
+      border-color: grey;
+      
+      transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+    }
+    .btn-custom:hover {
+      background-color: rgba(0, 0, 0, 0.1);   
+    }
+    .submit-btn:hover {
+      background-color: #c7c7c7; 
+      color: #333; 
+      
+    }
+    .submit-btn{
+      
+      width: 100%;
+      background-color: transparent;
+      border-color: grey;
+      transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+
+    }
+    
+    .note-container {
+        padding: 3rem;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        height: 800px; 
+        
+      }
+      ul li {
+        background-color: transparent; 
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+        padding: 10px; 
+        margin-bottom: 10px;  
+        
+      }
+      .share-btn{
+        background-color: transparent;
+        border: none;
+        
+        
+      }
+      .share-btn:hover {
+        background-color: #c7c7c7; 
+        
+        
+      }
+      
       
 
     </style>
