--- a/views/notes/notes.ejs
+++ b/views/notes/notes.ejs
@@ -1,7 +1,7 @@
 <%- include ("../partials/navbar.ejs") %>
 <style>
   body ul {
-  border:black solid 2px;
+  /* border:black solid 2px; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
@@ -61,23 +61,19 @@
         <h4><strong><%= note.title %></strong></h4>
       </div>
       <div style="display:flex">
-        <a id="btn" style="background-color: blue;" href="/notes/edit/<%= note.id %>/">Open</a>
-        <a id="btn" style="background-color: red;" href="#" onclick="deleteNote('<%= note.id %>')">Delete</a>
+        <a id="btn" style="background-color:#E7D4FD;color:  black; " href="/notes/edit/<%= note.id %>/">Open</a>
+        <a id="btn" style="background-color:#FFF092;color:  black; " href="#" onclick="deleteNote('<%= note.id %>')">Delete</a>
       </div>
-      <form action="/notes/share/<%= note.id %>" method="POST" style="height:auto;">
+      <form action="/notes/share/<%= note.id %>" method="POST" style="height:auto; margin-top: 30px;margin-left: 20px;">
         <input type="email" id="email" name="email" placeholder="Enter email to share" required>
-        <input type="submit" value="Share" style="font-size: larger;">
+        <input type="submit" value="Share" class="share-btn style="font: size 30px; margin-left: 10px; border: none;">
       </form>
       
 
     </li>
   <% }); %>
 
-  <a style="width: 100%;
-            background-color:white; 
-            padding:30px;border:solid; 
-            border: rgb(232, 232, 232) solid 15px;" 
-            id="creation" href="/notes/new">Create Notebook</a>
+  <a style="background-color: transparent; border-radius: 8px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); padding: 10px;margin-bottom: 10px; color: black" id="creation" href="/notes/new">Create a New Notebook</a>
 </ul>
 
 
@@ -93,3 +89,7 @@
   }
 </script>
 
+<!-- width: 100%;
+            background-color:#fcfaf8; 
+            padding:30px;border:solid; 
+            border: rgb(232, 232, 232) solid 15px; -->
