--- a/views/notes/create.ejs
+++ b/views/notes/create.ejs
@@ -5,9 +5,11 @@
 <div class="container">
   <form action="/notes" method="POST">
     <div class="form-group">
-      <label for="title">Title</label>
+      <label for="title">Add a Title</label>
       <input type="text" class="form-control" id="titleInput" placeholder="Title" name="title">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    
+    <button type="submit" class="btn btn-custom">Submit</button>
+
   </form>
 </div>
