--- a/views/notes/edit.ejs
+++ b/views/notes/edit.ejs
@@ -1,11 +1,26 @@
 <%- include ("../partials/navbar.ejs") %>
 
-<form action="/notes/update/<%= note.id %>" method="POST" style="height:auto;">
+<!-- <form action="/notes/update/<%= note.id %>" method="POST" style="height:auto; margin: 40px;">
+    <input type="submit" value="Submit" style="font-size: larger; border: none; background-color: transparent;">
     <input style="width:100%;font-size:x-large;border: none;" type="text" id="title" name="title" value="<%= note.title %>"><br>
-    <textarea id="content" name="content" style="width: 100%; font-size: larger; border: none; overflow: hidden;height:100%;" oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px'"><%= note.content %></textarea><br>
-    <input type="submit" value="Submit" style="font-size: larger;">
-</form>
+    <textarea id="content" name="content" style="width: 100%; font-size: larger; border: none; overflow: hidden;height:100%; margin-top: 20px;" oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px'" placeholder="New note! Write something here..."><%= note.content %></textarea><br>
 
+    
+</form> -->
+
+<div class="note-container" style="position: relative;">
+    <form action="/notes/update/<%= note.id %>" method="POST">
+      
+      <div class="form-group">
+        <input style="width:80%;font-size:x-large;border: none;" type="text" id="title" name="title" value="<%= note.title %>"><br>
+    
+        
+      </div>
+      <textarea id="content" name="content" style="width: 100%; font-size: larger; border: none; overflow: hidden; height:100%; margin-top: 20px;" oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px'" placeholder="New note! Write something here..."><%= note.content %></textarea><br>
+      <button type="submit" class="btn btn-default submit-btn" style="margin-top: 500px;" >Submit</button>
+    </form>
+  </div>
+  
 
 
 <script>
