--- a/views/flashcards/flashcards.ejs
+++ b/views/flashcards/flashcards.ejs
@@ -95,13 +95,23 @@
   display: inline-block;
   width: 100%;
   padding: 10px 20px;
-  color: white;
+  color: black;
   text-align: center;
   text-decoration: none;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   }
+
+  .btn-delete{
+    background-color: #E7D4FD;
+  }
+
+  .btn-edit{
+    background-color: #FFF092;
+  }
+
+  
   /* card animations */
 
 
@@ -163,9 +173,9 @@
         </div>
       </div>
       <div class="btn-display"> 
-          <a id="btn" style="background-color:blue;" href="/flashcards/edit/<%= flashcard.id %>">Edit</a>
+          <a id="btn" class="btn-edit"  href="/flashcards/edit/<%= flashcard.id %>">Edit</a>
           <form class="deleteForm" method="POST" action=<%= "/flashcards/delete/" + flashcard.id %>>
-              <button type="submit" id="btn" style="background-color:red">Delete</button>
+              <button type="submit" id="btn" class= "btn-delete" >Delete</button>
           </form>
       <div> 
 
