--- a/views/flashcards/flashcards.ejs
+++ b/views/flashcards/flashcards.ejs
@@ -20,7 +20,7 @@
     margin-bottom: 0px;
   }
 
-  #new-flashcard-container
+  #header-btn-container
   {
     display:flex;
     justify-content: flex-end;
@@ -156,7 +156,7 @@
 
 <div class="header">
   <h1>Flashcards</h1>
-  <div id="new-flashcard-container"> 
+  <div id="header-btn-container"> 
     <a href="/flashcards/new" class="btn btn-secondary" id="new-flashcard">New Flashcard</a>
   </div>
   
