--- a/views/flashcards/flashcard_create.ejs
+++ b/views/flashcards/flashcard_create.ejs
@@ -4,28 +4,12 @@
 
 
 <style>
-    .flashcard-container {
-      width: fit-content;
-    }
-    ul{
-      border:black solid 2px;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-    }
-    li, #creation {
-    /* border: solid rgb(176, 176, 176) 3px; */
-    padding: 10px 10px 10px 10px;
-    background-color: rgb(232, 232, 232);
-    margin: 30px 30px 30px 30px;
-    border-radius:5px;  
-    border: rgb(232, 232, 232) solid 2px;
-    list-style-type: none;
-    
+  body{
+    text-align: center;
+    overflow: visible;
   }
 
-    /* import from flashcards.ejs */
-    .header{
+  .header{
     max-width: 1140px;
     display:flex;
     margin: 1vw auto 1vw auto;
@@ -36,7 +20,7 @@
     margin-bottom: 0px;
   }
 
-  #new-flashcard-container
+  #header-btn-container
   {
     display:flex;
     justify-content: flex-end;
@@ -45,51 +29,129 @@
     align-items:center;
   }
 
-  #btn-submit{
+  #new-flashcard{
     margin-bottom: auto;
-    margin-top: auto;
+  }
+ 
+
+  .flashcard-container {
+    width: fit-content;
+  }   
+
+
+
+  ul{
+    border-top:black solid 2px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    gap: 10px;
+
+  }
+  li, #creation {
+  /* border: solid rgb(176, 176, 176) 3px; */
+  padding: 10px 10px 10px 10px;
+  background-color: rgb(232, 232, 232);
+  margin: 30px 30px 30px 30px;
+  border-radius:5px;  
+  border: rgb(232, 232, 232) solid 2px;
+  list-style-type: none;
+    
   }
 
-    .flashcard {
-      position: relative;
-      width: 300px; /* Set a fixed width */
-      min-height: 200px; /* Set a minimum height */
-      margin: 10px;
-      border: 1px solid #ccc;
-      overflow: auto; /* Allow the flashcard to expand vertically */
-    }
-  
-    .flashcard-question, .flashcard-answer {
-      display: none;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      padding: 10px;
-      width: 100%;
-      cursor: pointer;
-      height:250px;
-    }
-  
-    .flashcard-question {
-      display: flex;
-    }
-    #btn-display{
-        display:flex;
-        justify-content: space-between;
-    }
-    #btn {
-    margin: 10px 10px 10px 10px;
-    display: inline-block;
-    width: 100%;
-    padding: 10px 20px;
-    color: white;
-    text-align: center;
-    text-decoration: none;
+
+
+  .flashcard {
+    position: relative;
+    width: 300px; /* Set a fixed width */
+    min-height: 200px; /* Set a minimum height */
+    margin: 10px;
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+    overflow: auto; /* Allow the flashcard to expand vertically */
   }
+
+  .flashcard-question, .flashcard-answer {
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+    height:250px;
+  }
+
+  .flashcard-question {
+    display: flex;
+  }
+
+  .flashcard-answer{
+    display: none;
+  }
+  .btn-display{
+      display:flex;
+      justify-content: space-between;
+  }
+  #btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 20px;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  }
+
+  .btn-delete{
+    background-color: #FFF092;
+  }
+
+  .btn-edit{
+    background-color: #E7D4FD;
+  }
+
+  
+  /* card animations */
+
+
+  .flip{
+    animation: .5s 1 alternate ease flip;
+  }
+
+  .unflip {
+    animation: .5s 1 alternate ease unflip;
+  }
+
+  @keyframes unflip {
+    from {
+      transform: rotateY(180deg);
+
+      
+    }
+
+    to {
+      transform: rotateY(0deg);
+      
+    }
+  }
+
+  @keyframes flip {
+    from {
+        transform: rotateY(0deg);
+    }
+
+    to {
+        transform: rotateY(180deg);
+    }
+
+  
+  }
+
 
 
 
@@ -97,9 +159,8 @@
   
   <!-- import from flashcards.ejs -->
   <div class="header">
-    <h1>Flashcards</h1>
-    <div id="new-flashcard-container">  
-      <button type="submit" id="btn-submit" class="btn btn-secondary">Submit</button>
+    <h1>Create Flashcard</h1>
+    <div id="header-btn-container">  
     </div>
   </div>
   
@@ -113,49 +174,72 @@
             <label for="description">Answer</label>
             <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="answer"></textarea>
         </div>
+        <button type="submit" class="btn btn-custom">Submit</button>
     </form>
-    </div>
     
+  </div>
+    
+<!-- COPYPASTE flashcards.ejs LOL -->
 
-  <ul > 
-    <% flashcards.forEach(flashcard => { %>
-      <li  style="width:fit-content;">
-        <div class="flashcard-container">
-          <div class="flashcard">
-            <div class="flashcard-question">
-              <h4><%= flashcard.question %></h4>
-            </div>
-            <div class="flashcard-answer">
-              <h4><%= flashcard.answer %></h4>
-            </div>
+
+
+<ul > 
+  <% flashcards.forEach(flashcard => { %>
+    <li  style="width:fit-content;">
+      <div class="flashcard-container">
+        <div class="flashcard">
+          <div class="flashcard-question" >
+            <h4><%= flashcard.question %></h4>
+          </div>
+          <div class="flashcard-answer">
+            <h4><%= flashcard.answer %></h4>
           </div>
         </div>
-        <div id="btn-display"> 
-            <button id="btn" style="background-color:blue;">Edit</button>
-            <button id="btn" style="background-color:red;">Delete</button>
-        <div> 
+      </div>
+      <div class="btn-display"> 
+          <a id="btn" class="btn-edit"   href="/flashcards/edit/<%= flashcard.id %>">Edit</a>
+          <form class="deleteForm" method="POST" action=<%= "/flashcards/delete/" + flashcard.id %>>
+              <button type="submit" id="btn" class= "btn-delete" >Delete</button>
+          </form>
+      <div> 
 
-      </li>
-    <% }); %>
-    <div id="new-flashcard" class="flashcard-container">
-        
-    </div>
-  </ul>
+    </li>
+  <% }); %>
   
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.flashcard-container').forEach(container => {
-        container.addEventListener('click', () => {
-          const question = container.querySelector('.flashcard-question');
-          const answer = container.querySelector('.flashcard-answer');
-          if (question.style.display !== 'none') {
-            question.style.display = 'none';
-            answer.style.display = 'flex';
-          } else {
-            question.style.display = 'flex';
-            answer.style.display = 'none';
-          }
-        });
+</ul>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    document.querySelectorAll('.flashcard-container').forEach(container => {
+      container.addEventListener('click', () => {
+        const question = container.querySelector('.flashcard-question');
+        const answer = container.querySelector('.flashcard-answer');
+        const flashcard = container.parentNode;
+        const buttons = container.parentNode.querySelector(".btn-display")
+        const flippers = [question, answer, flashcard, buttons]
+        if (question.style.display !== 'none') {
+          question.style.display = 'none';
+          /* STEVEN */
+          answer.style.display = 'flex';
+
+          flippers.forEach(element => {
+            element.classList.remove('unflip');
+            element.classList.add('flip');
+            console.log(element)
+          })
+
+        } else {
+          question.style.display = 'flex';
+          answer.style.display = 'none';
+
+          flippers.forEach(element => {
+            element.classList.remove('flip');
+            element.classList.add('unflip');
+            console.log(element)
+          })
+
+        }
       });
     });
-  </script>
+  });
+</script>
