--- a/views/notes/notes.ejs
+++ b/views/notes/notes.ejs
@@ -66,14 +66,14 @@
       </div>
       <form action="/notes/share/<%= note.id %>" method="POST" style="height:auto; margin-top: 30px;margin-left: 20px;">
         <input type="email" id="email" name="email" placeholder="Enter email to share" required>
-        <input type="submit" value="Share" class="share-btn style="font: size 30px; margin-left: 10px; border: none;">
+        <input type="submit" value="Share" class="share-btn style="font: size 30px; margin-left: 10px; border: none;>
       </form>
       
 
     </li>
   <% }); %>
 
-  <a style="background-color: transparent; border-radius: 8px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); padding: 10px;margin-bottom: 10px; color: black" id="creation" href="/notes/new">Create a New Notebook</a>
+  <a style="background-color: transparent; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); padding: 10px; margin-bottom: 10px; color: black; display: flex; justify-content: center; align-items: center; text-align: center;" id="creation" href="/notes/new">Create a New Notebook</a>
 </ul>
 
 
