Final Changes (for now)

--- a/views/reminder/index.ejs
+++ b/views/reminder/index.ejs
@@ -97,6 +97,7 @@
 </div>
 
 <script>
+  //PLEASE DO NOT OTUCH, IT WORKS BUT NOT THAT WELL BUT ITS SOMETHING
   const isLeapYear = (year) => {
   return (
     (year % 4 === 0 && year % 100 !== 0 && year % 400 !== 0) ||
